--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhumika</title>
-    <link rel="stylesheet" href="app.css">
+    <title>HBD Taniya</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <script>
@@ -87,7 +87,7 @@
           </div>
           <div class="carousel-item">
             <div class="carousel-box">
-              <div class="title">Bhumika 🍫</div>
+              <div class="title">Taniya 🍫</div>
               <div class="num">10</div>
               <img src="10.jpg" />
             </div>
